--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>может боксирует?</h1>
-    <img src="/img/img1.png" alt="абсолютный путь">
+    <img src="/folder/img/img1.png" alt="абсолютный путь">
     <p>а эта точно не боксирует</p>
     <img src="../../img/img2.png" alt="относительный пут">
 </body>
